--- a/packages/workspaces/settings-applier.service
+++ b/packages/workspaces/settings-applier.service
@@ -1,11 +1,12 @@
 [Unit]
 Description=Applies settings to create config files
-After=apiserver.service settings-committer.service
+After=storewolf.service sundog.service moondog.service apiserver.service
 Requires=apiserver.service
-Wants=settings-committer.service
+Wants=storewolf.service sundog.service moondog.service
 
 [Service]
 Type=oneshot
+ExecStartPre=/usr/bin/settings-committer
 ExecStart=/usr/bin/thar-be-settings --all
 RemainAfterExit=true
 StandardError=journal+console
