--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "api/moondog",
     "api/netdog",
     "api/sundog",
+    "api/schnauzer",
     "api/pluto",
     "api/servicedog",
     "api/host-containers",
