--- a/workspaces/api/schnauzer/Cargo.toml
+++ b/workspaces/api/schnauzer/Cargo.toml
@@ -1,25 +1,21 @@
 [package]
-name = "thar-be-settings"
+name = "schnauzer"
 version = "0.1.0"
-authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
+authors = ["Tom Kirchner <tjk@amazon.com>"]
 edition = "2018"
 publish = false
 build = "build.rs"
 
 [dependencies]
 apiclient = { path = "../apiclient" }
+base64 = "0.11"
 handlebars = "3.0"
 http = "0.1"
-itertools = "0.8"
 log = "0.4"
 models = { path = "../../models" }
-schnauzer = { path = "../schnauzer" }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-simplelog = "0.7"
 snafu = "0.6"
 
 [build-dependencies]
 cargo-readme = "3.1"
-
-[dev-dependencies]
-maplit = "1.0"
