ci: add README for stacks with general description

--- a/tools/infra/stacks/Makefile
+++ b/tools/infra/stacks/Makefile
@@ -10,4 +10,12 @@ validate/%:
 	$(info validating stack: $*)
 	aws cloudformation validate-template --template-body "$$(< $*)"
 
+check: check-readme
+
+check-readme:
+	@$(foreach stack,$(stacks:.yml=),\
+		grep -Fw -q -e "$(stack)" README.md ||\
+		{ MISSING=1; echo "Missing README section mentioning $(stack)";  }; )\
+	$${MISSING:+exit 1}
+
 .PHONY: test list
