ci: capture additional images needed from build
Related to: #630

--- a/tools/infra/buildspec/thar-pr-build.yml
+++ b/tools/infra/buildspec/thar-pr-build.yml
@@ -19,6 +19,8 @@ artifacts:
   base-directory: 'build/'
   files:
     - '*.img*'
+    - '*.ext4*'
+    - '*.verity*'
   secondary-artifacts:
     meta:
       base-directory: 'build/meta'
