Add migration to remove region on downgrade
Older versions don't know about this setting and would fail to deserialize the
model if it's present.  (We currently need to write a migration for any
added/removed settings, but this will be automated away.)

Region is a generated setting, so we're not throwing away anything important.

--- a/RELEASE.toml
+++ b/RELEASE.toml
@@ -4,4 +4,4 @@ datastore_version = "0.2"
 [[migrations]]
 from = "0.2.0"
 to = "0.2.1"
-names = ["migrate_0.2_containerd-config-path"]
+names = ["migrate_0.2_containerd-config-path", "migrate_0.2_remove-region"]
