--- a/packages/release/prepare-local.service
+++ b/packages/release/prepare-local.service
@@ -10,6 +10,7 @@ After=dev-disk-by\x2dpartlabel-BOTTLEROCKET\x2dDATA.device
 Type=oneshot
 Environment=BOTTLEROCKET_DATA=/dev/disk/by-partlabel/BOTTLEROCKET-DATA
 Environment=LOCAL_DIR=/local
+Environment=CONTEXT="system_u:object_r:local_t:s0"
 
 # To "grow" the partition, we delete it and recreate it at the larger size, which
 # causes the udev links to be deleted and then recreated. We have to wait for the
@@ -28,7 +29,9 @@ ExecStart=/usr/bin/udevadm settle -E ${BOTTLEROCKET_DATA}
 # The above note means we can't have a "normal" mount unit here, because it would
 # depend on the link, and would immediately transition to the failed state when the
 # link is removed. systemd will create local.mount for us as a side effect.
-ExecStart=/usr/bin/mount -o defaults,noatime,nosuid,nodev ${BOTTLEROCKET_DATA} ${LOCAL_DIR}
+ExecStart=/usr/bin/mount \
+    -o defaults,noatime,nosuid,nodev,fscontext="${CONTEXT}",defcontext="${CONTEXT}",rootcontext="${CONTEXT}" \
+    ${BOTTLEROCKET_DATA} ${LOCAL_DIR}
 
 # After the mount is active, we grow the filesystem to fill the resized partition,
 # and ensure that it has the directories we need for subsequent mounts.
