containerd: specify killmode=mixed
KillMode=mixed is necessary because when containerd.service shuts down
it also needs to reap its child `containerd-shim` processes. Otherwise
the system gets stuck on waiting for shim processes to stop when trying to reboot

--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -7,7 +7,7 @@ Wants=network-online.target configured.target
 [Service]
 ExecStart=/usr/bin/containerd
 Delegate=yes
-KillMode=process
+KillMode=mixed
 TimeoutSec=0
 RestartSec=2
 Restart=always
