Add migration for changed containerd config template path
We changed the path to the containerd config template file in #613 to support
image variants, and we need a migration to update existing installations.

--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     # workspace member when we add cross-workspace dependencies.
     "api/migration/migrations/v0.1/borkseed",
     "api/migration/migrations/v0.1/host-containers-version",
+    "api/migration/migrations/v0.2/containerd-config-path",
 
     "models",
 
