--- a/RELEASE.toml
+++ b/RELEASE.toml
@@ -1,7 +1,7 @@
-version = "0.2.0"
-datastore_version = "0.1"
+version = "0.2.1"
+datastore_version = "0.2"
 
 [[migrations]]
-from = "0.1.6"
-to = "0.2.0"
-names = ["migrate_0.1_borkseed", "migrate_0.1_host-containers-version-migration"]
+from = "0.2.0"
+to = "0.2.1"
+names = ["migrate_0.2_containerd-config-path"]
