Fix reference to parameter in signing keys cf stack

--- a/tools/infra/stacks/signing-cross-account-read-role.yml
+++ b/tools/infra/stacks/signing-cross-account-read-role.yml
@@ -25,7 +25,7 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              AWS: !Join [ ',' , [!Ref AllowedAccountIds]]
+              AWS: !Ref AllowedAccountIds
             Action:
               - 'sts:AssumeRole'
       Policies:
