--- a/workspaces/api/migration/migration-helpers/Cargo.toml
+++ b/workspaces/api/migration/migration-helpers/Cargo.toml
@@ -9,3 +9,7 @@ publish = false
 apiserver = { path = "../../apiserver" }
 snafu = "0.6"
 toml = "0.5"
+
+[dev-dependencies]
+maplit = "1.0"
+serde_json = "1.0"
