--- a/extras/sdk-container/license-scan/deny.toml
+++ b/extras/sdk-container/license-scan/deny.toml
@@ -1,44 +1,22 @@
 [licenses]
 unlicensed = "deny"
-unknown = "deny"
+
+# Deny licenses unless they are specifically listed here
+copyleft = "deny"
+allow-osi-fsf-free = "neither"
+default = "deny"
+
 # We want really high confidence when inferring licenses from text
-confidence_threshold = 0.93
+confidence-threshold = 0.93
 
 allow = [
     "Apache-2.0",
     "BSD-2-Clause",
-    "BSD-2-Clause-FreeBSD",
-    "BSD-3-Clause",
-    "CC0-1.0",
-    "ISC",
-    "MIT",
-    "Openssl",
-    "Unlicense",
-    "Zlib",
-
-    # cargo-deny currently parses out exceptions as separate licenses, which may not be the correct thing to do
-    # example: `wasi` crate uses "Apache-2.0 WITH LLVM-exception" as on of the licenses
-    # tracked in https://github.com/EmbarkStudios/cargo-deny/issues/22
-    "LLVM-exception",
-
-    # pending review
     "BSL-1.0",
+    "MIT",
+    "Unlicense",
 ]
 
-skip = [
-    # first-party code, license pending
-    { name = "thar-license-scan", licenses = [] },
-]
-
-ignore = [
-    # crossbeam-queue:
-    # - Bounded MPMC queue: BSD-2-Clause-FreeBSD
-    { name = "crossbeam-queue", license_files = [{ path = "LICENSE-THIRD-PARTY", hash = 0x7e40bc60 }] },
-
-    # crossbeam-channel:
-    # - Bounded MPMC queue: BSD-2-Clause-FreeBSD
-    # - matching.go: CC-BY-3.0
-    # - Go: BSD-3-Clause
-    # - Rust: Apache-2.0 OR MIT
-    { name = "crossbeam-channel", license_files = [{ path = "LICENSE-THIRD-PARTY", hash = 0xc6242648 }] },
-]
+# FIXME: Remove this when a license is assigned for first-party packages
+[licenses.private]
+ignore = true
