--- a/workspaces/api/data_store_version/Cargo.toml
+++ b/workspaces/api/data_store_version/Cargo.toml
@@ -3,6 +3,7 @@ name = "data_store_version"
 version = "0.1.0"
 authors = ["mrowicki <mrowicki@amazon.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 lazy_static = "1.2"
