--- a/workspaces/growpart/Cargo.toml
+++ b/workspaces/growpart/Cargo.toml
@@ -3,6 +3,7 @@ name = "growpart"
 version = "0.1.0"
 authors = ["Ben Cressey <bcressey@amazon.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 gptman = { version = "0.5.0", default-features = false }
