--- a/workspaces/api/migration/migrations/v0.1/migrate-host-containers-version/Cargo.toml
+++ b/workspaces/api/migration/migrations/v0.1/migrate-host-containers-version/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "remove-region"
+name = "migrate-host-containers-version"
 version = "0.1.0"
-authors = ["Tom Kirchner <tjk@amazon.com>"]
+authors = ["Erikson Tung <etung@amazon.com>"]
 edition = "2018"
 publish = false
 
