--- a/workspaces/api/migration/migrations/v0.2/migrate-containerd-config-path/Cargo.toml
+++ b/workspaces/api/migration/migrations/v0.2/migrate-containerd-config-path/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "borkseed-migration"
+name = "migrate-containerd-config-path"
 version = "0.1.0"
 authors = ["Tom Kirchner <tjk@amazon.com>"]
 edition = "2018"
