--- a/workspaces/api/migration/migrations/v0.2/migrate-remove-region/Cargo.toml
+++ b/workspaces/api/migration/migrations/v0.2/migrate-remove-region/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "host-containers-version-migration"
+name = "migrate-remove-region"
 version = "0.1.0"
-authors = ["Erikson Tung <etung@amazon.com>"]
+authors = ["Tom Kirchner <tjk@amazon.com>"]
 edition = "2018"
 publish = false
 
