Update packages/ from Thar to Bottlerocket

--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -15,7 +15,7 @@ net.ipv6.neigh.default.gc_thresh2 = 15360
 net.ipv4.neigh.default.gc_thresh3 = 16384
 net.ipv6.neigh.default.gc_thresh3 = 16384
 
-## Thar settings ##
+## Bottlerocket settings ##
 # Enable IPv4 forwarding for container networking.
 net.ipv4.conf.all.forwarding = 1
 
