--- a/packages/workspaces/api-sysusers.conf
+++ b/packages/workspaces/api-sysusers.conf
@@ -1,2 +1,2 @@
-# Create `api` group with gid of 274 to limit access to the Thar API socket
+# Create `api` group with gid of 274 to limit access to the Bottlerocket API socket
 g api 274 -
