--- a/packages/workspaces/storewolf.service
+++ b/packages/workspaces/storewolf.service
@@ -5,7 +5,7 @@ Requires=migrator.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/storewolf --data-store-base-path /var/lib/thar/datastore
+ExecStart=/usr/bin/storewolf --data-store-base-path /var/lib/bottlerocket/datastore
 RemainAfterExit=true
 StandardError=journal+console
 
