--- a/packages/release/prepare-local.service
+++ b/packages/release/prepare-local.service
@@ -3,32 +3,33 @@ Description=Prepare Local Directory (/local)
 DefaultDependencies=no
 
 # We need udev to create /dev/disk/by-partlabel/THAR-DATA first.
+# TODO: change "THAR" to "BOTTLEROCKET" (here and below) when we change rpm2img
 Wants=dev-disk-by\x2dpartlabel-THAR\x2dDATA.device
 After=dev-disk-by\x2dpartlabel-THAR\x2dDATA.device
 
 [Service]
 Type=oneshot
-Environment=THAR_DATA=/dev/disk/by-partlabel/THAR-DATA
+Environment=BOTTLEROCKET_DATA=/dev/disk/by-partlabel/THAR-DATA
 Environment=LOCAL_DIR=/local
 
 # To "grow" the partition, we delete it and recreate it at the larger size, which
 # causes the udev links to be deleted and then recreated. We have to wait for the
 # links to return before continuing.
-ExecStart=/usr/sbin/growpart ${THAR_DATA}
-ExecStart=/usr/bin/udevadm settle -E ${THAR_DATA}
+ExecStart=/usr/sbin/growpart ${BOTTLEROCKET_DATA}
+ExecStart=/usr/bin/udevadm settle -E ${BOTTLEROCKET_DATA}
 
 # HACK: If the GPT label was not already at the end of the disk, the first pass
 # will write it there, but any additional sectors beyond the original position
 # were not included in the resized partition. Now that the kernel has reloaded
 # the partition table, the second pass can find and use those sectors. This
 # avoids the need to synchronize with the kernel (and udev) inside `growpart`.
-ExecStart=/usr/sbin/growpart ${THAR_DATA}
-ExecStart=/usr/bin/udevadm settle -E ${THAR_DATA}
+ExecStart=/usr/sbin/growpart ${BOTTLEROCKET_DATA}
+ExecStart=/usr/bin/udevadm settle -E ${BOTTLEROCKET_DATA}
 
 # The above note means we can't have a "normal" mount unit here, because it would
 # depend on the link, and would immediately transition to the failed state when the
 # link is removed. systemd will create local.mount for us as a side effect.
-ExecStart=/usr/bin/mount -o defaults,noatime,nosuid,nodev ${THAR_DATA} ${LOCAL_DIR}
+ExecStart=/usr/bin/mount -o defaults,noatime,nosuid,nodev ${BOTTLEROCKET_DATA} ${LOCAL_DIR}
 
 # After the mount is active, we grow the filesystem to fill the resized partition,
 # and ensure that it has the directories we need for subsequent mounts.
