--- a/tools/infra/stacks/bottlerocket-pr-build.yml
+++ b/tools/infra/stacks/bottlerocket-pr-build.yml
@@ -1,11 +1,11 @@
-# stack-name: thar-pr-build
+# stack-name: bottlerocket-pr-build
 # stack-require: infra-container
 
 Parameters:
   BuildSpecPath:
     Type: String
     AllowedPattern: '.+\.yml$'
-    Default: "./tools/infra/buildspec/thar-pr-build.yml"
+    Default: "./tools/infra/buildspec/bottlerocket-pr-build.yml"
     Description: >-
       The path to the buildspec.yml file to use.
   SourceGitHubRepositoryURL:
@@ -96,7 +96,7 @@ Resources:
             Resource:
               - !GetAtt BuildLogGroup.Arn
 
-  TharPRBuild:
+  BottlerocketPRBuild:
     Type: AWS::CodeBuild::Project
     DependsOn:
       - BuildArtifactBucket
@@ -151,4 +151,4 @@ Outputs:
   LogBucket:
     Value: !Ref BuildLogBucket
   Project:
-    Value: !Ref TharPRBuild
+    Value: !Ref BottlerocketPRBuild
