Update sdk-container from Thar to Bottlerocket

--- a/extras/sdk-container/license-scan/Cargo.toml
+++ b/extras/sdk-container/license-scan/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "thar-license-scan"
+name = "bottlerocket-license-scan"
 version = "0.1.0"
 authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
 edition = "2018"
