--- a/extras/sdk-container/configs/buildroot/sdk_x86_64_musl_defconfig
+++ b/extras/sdk-container/configs/buildroot/sdk_x86_64_musl_defconfig
@@ -5,7 +5,7 @@ BR2_OPTIMIZE_2=y
 BR2_SSP_STRONG=y
 BR2_RELRO_FULL=y
 BR2_FORTIFY_SOURCE_2=y
-BR2_TOOLCHAIN_BUILDROOT_VENDOR="thar"
+BR2_TOOLCHAIN_BUILDROOT_VENDOR="bottlerocket"
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_KERNEL_HEADERS_4_19=y
 BR2_BINUTILS_VERSION_2_32_X=y
