--- a/workspaces/models/defaults.toml
+++ b/workspaces/models/defaults.toml
@@ -57,7 +57,7 @@ superpowered = true
 
 [metadata.settings.host-containers.admin.source]
 setting-generator = "schnauzer settings.host-containers.admin.source"
-template = "328549459982.dkr.ecr.{{ settings.aws.region }}.amazonaws.com/thar-admin:v0.2"
+template = "328549459982.dkr.ecr.{{ settings.aws.region }}.amazonaws.com/bottlerocket-admin:v0.2"
 
 [settings.host-containers.control]
 enabled = true
@@ -65,7 +65,7 @@ superpowered = false
 
 [metadata.settings.host-containers.control.source]
 setting-generator = "schnauzer settings.host-containers.control.source"
-template = "328549459982.dkr.ecr.{{ settings.aws.region }}.amazonaws.com/thar-control:v0.2"
+template = "328549459982.dkr.ecr.{{ settings.aws.region }}.amazonaws.com/bottlerocket-control:v0.2"
 
 [services.host-containers]
 configuration-files = []
