license-scan: Add Cargo.toml support

--- a/extras/sdk-container/license-scan/Cargo.toml
+++ b/extras/sdk-container/license-scan/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 anyhow = "1"
 askalono = "0.4"
+cargo_metadata = "0.9"
 ignore = "0.4"
 lazy_static = "1"
 serde = { version = "1", features = ["derive"] }
