--- a/workspaces/api/migration/migration-helpers/Cargo.toml
+++ b/workspaces/api/migration/migration-helpers/Cargo.toml
@@ -7,9 +7,12 @@ publish = false
 
 [dependencies]
 apiserver = { path = "../../apiserver" }
+schnauzer = { path = "../../schnauzer" }
+handlebars = "3.0.1"
 snafu = "0.6"
 toml = "0.5"
 serde_json = "1.0"
+serde = "1.0.104"
 
 [dev-dependencies]
 maplit = "1.0"
