migrations:  add new host-containers version migration from v0.2 to v0.3
Adds new migration binary for bumping the default host containers
version from v0.2 to v0.3.
v0.3 contains IMDSv2 support and API transaction support.
The migration also includes a name change for the host-container images

--- a/workspaces/Cargo.toml
+++ b/workspaces/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "api/migration/migrations/v0.1/migrate-host-containers-version",
     "api/migration/migrations/v0.2/migrate-containerd-config-path",
     "api/migration/migrations/v0.2/migrate-remove-region",
+    "api/migration/migrations/v0.2/migrate-host-containers-v03",
 
     "models",
 
