containerd: disable unused plugins
Disabling them removes surface area from containerd, and lets us
defer the work of figuring out how they should interact with our
SELinux policy.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/host-ctr/host-containerd-config.toml
+++ b/packages/host-ctr/host-containerd-config.toml
@@ -2,14 +2,13 @@ version = 2
 root = "/var/lib/host-containerd"
 state = "/run/host-containerd"
 disabled_plugins = [
+    "io.containerd.internal.v1.opt",
     "io.containerd.snapshotter.v1.aufs",
-    "io.containerd.snapshotter.v1.zfs",
     "io.containerd.snapshotter.v1.devmapper",
+    "io.containerd.snapshotter.v1.native",
+    "io.containerd.snapshotter.v1.zfs",
     "io.containerd.grpc.v1.cri",
 ]
 
 [grpc]
 address = "/run/host-containerd/containerd.sock"
-
-[plugins."io.containerd.internal.v1.opt"]
-path = "/opt/host-containerd"
