Add license metadata to first-party code

--- a/workspaces/api/bork/Cargo.toml
+++ b/workspaces/api/bork/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bork"
 version = "0.1.0"
 authors = ["Samuel Mendoza-Jonas <samjonas@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 
