--- a/workspaces/api/data_store_version/Cargo.toml
+++ b/workspaces/api/data_store_version/Cargo.toml
@@ -2,6 +2,7 @@
 name = "data_store_version"
 version = "0.1.0"
 authors = ["mrowicki <mrowicki@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 
