--- a/workspaces/api/host-containers/Cargo.toml
+++ b/workspaces/api/host-containers/Cargo.toml
@@ -2,6 +2,7 @@
 name = "host-containers"
 version = "0.1.0"
 authors = ["Tom Kirchner <tjk@amazon.com>", "Zac Mrowicki <mrowicki@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 build = "build.rs"
