--- a/workspaces/api/migration/migrations/v0.1/migrate-host-containers-version/Cargo.toml
+++ b/workspaces/api/migration/migrations/v0.1/migrate-host-containers-version/Cargo.toml
@@ -2,6 +2,7 @@
 name = "migrate-host-containers-version"
 version = "0.1.0"
 authors = ["Erikson Tung <etung@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 
