--- a/workspaces/api/moondog/Cargo.toml
+++ b/workspaces/api/moondog/Cargo.toml
@@ -2,6 +2,7 @@
 name = "moondog"
 version = "0.1.0"
 authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 build = "build.rs"
