--- a/workspaces/growpart/Cargo.toml
+++ b/workspaces/growpart/Cargo.toml
@@ -2,6 +2,7 @@
 name = "growpart"
 version = "0.1.0"
 authors = ["Ben Cressey <bcressey@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 
