--- a/workspaces/preinit/laika/Cargo.toml
+++ b/workspaces/preinit/laika/Cargo.toml
@@ -2,6 +2,7 @@
 name = "laika"
 version = "0.1.0"
 authors = ["Erikson Tung <etung@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 build = "build.rs"
