--- a/workspaces/updater/signpost/Cargo.toml
+++ b/workspaces/updater/signpost/Cargo.toml
@@ -2,6 +2,7 @@
 name = "signpost"
 version = "0.1.0"
 authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
+license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
 
