--- a/packages/os/sundog.service
+++ b/packages/os/sundog.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=User-specified setting generators
 # Need network access to support commands talking to IMDS.
-After=network-online.target apiserver.service moondog.service
+After=network-online.target apiserver.service early-boot-config.service
 Requires=network-online.target apiserver.service
 
 [Service]
