--- a/packages/os/early-boot-config.service
+++ b/packages/os/early-boot-config.service
@@ -3,13 +3,13 @@ Description=Bottlerocket userdata configuration system
 # Need network online to talk to IMDS.
 After=network-online.target apiserver.service
 Requires=network-online.target apiserver.service
-# We only want to run once, at first boot.  This file is created by moondog
+# We only want to run once, at first boot.  This file is created by early-boot-config
 # after a successful run.
-ConditionPathExists=!/var/lib/bottlerocket/moondog.ran
+ConditionPathExists=!/var/lib/bottlerocket/early-boot-config.ran
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/moondog
+ExecStart=/usr/bin/early-boot-config
 RemainAfterExit=true
 StandardError=journal+console
 
