packages: update first-party package's Cargo.toml
This commit update the first-party package's Cargo.toml with additional
first party rust crates.

--- a/packages/workspaces/Cargo.toml
+++ b/packages/workspaces/Cargo.toml
@@ -9,9 +9,12 @@ build = "build.rs"
 variant-sensitive = true
 source-groups = [
     "api",
+    "bottlerocket-release",
     "growpart",
     "updater",
     "webpki-roots-shim",
+    "models",
+    "preinit",
 ]
 
 [lib]
