Add /os to API to describe version, variant, arch, etc.

--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -9,6 +9,7 @@ build = "build.rs"
 
 [dependencies]
 actix-web = { version = "1.0.5", default-features = false, features = ["uds"] }
+bottlerocket-release = { path = "../../bottlerocket-release" }
 libc = "0.2"
 log = "0.4"
 models = { path = "../../models" }
