Allow use of OS information in schnauzer templates

--- a/sources/api/thar-be-settings/Cargo.toml
+++ b/sources/api/thar-be-settings/Cargo.toml
@@ -9,6 +9,7 @@ build = "build.rs"
 
 [dependencies]
 apiclient = { path = "../apiclient" }
+erased-serde = "0.3"
 handlebars = "3.0"
 http = "0.1"
 itertools = "0.8"
