--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -10,6 +10,8 @@ build = "build.rs"
 [dependencies]
 apiclient = { path = "../apiclient" }
 base64 = "0.11"
+bottlerocket-release = { path = "../../bottlerocket-release" }
+erased-serde = "0.3"
 handlebars = "3.0"
 http = "0.1"
 log = "0.4"
