Add MIT/Apache license file hashes to backtrace-sys clarify statement
These license files were added in the crates/backtrace-sys directory of the
archive, as symlinks to the files in the top level of the archive.  This makes
the scanner find them for the backtrace-sys crate explicitly, so they need to
be listed in the license files of the backtrace-sys clarification, otherwise we
get a file mismatch error.

--- a/sources/clarify.toml
+++ b/sources/clarify.toml
@@ -2,6 +2,8 @@
 # backtrace-sys is MIT/Apache-2.0, libbacktrace is BSD-3-Clause
 expression = "(MIT OR Apache-2.0) AND BSD-3-Clause"
 license-files = [
+    { path = "LICENSE-APACHE", hash = 0x24b54f4b },
+    { path = "LICENSE-MIT", hash = 0x9374b940 },
     { path = "src/libbacktrace/LICENSE", hash = 0x0ce09262 },
 ]
 
