Rename Kubernetes package to 1.15 to make way for new versions
The main change is adding a version to the name of the kubelet package so that
the variant can pick the relevant Kubernetes version.

--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -25,7 +25,7 @@ members = [
     "iputils",
     "kernel",
     "kmod",
-    "kubernetes",
+    "kubernetes-1.15",
     "libacl",
     "libattr",
     "libaudit",
