containerd: enable systemd notify support
This gives us a more accurate view of the daemon's status.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/host-ctr/host-containerd.service
+++ b/packages/host-ctr/host-containerd.service
@@ -6,6 +6,7 @@ Wants=network-online.target configured.target
 
 [Service]
 ExecStart=/usr/bin/containerd --config /etc/host-containerd/config.toml
+Type=notify
 Delegate=yes
 KillMode=process
 TimeoutSec=0
