--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -6,6 +6,7 @@ Wants=network-online.target configured.target
 
 [Service]
 ExecStart=/usr/bin/containerd
+Type=notify
 Delegate=yes
 KillMode=process
 TimeoutSec=0
