--- a/sources/api/migration/migrator/Cargo.toml
+++ b/sources/api/migration/migrator/Cargo.toml
@@ -13,7 +13,7 @@ lazy_static = "1.2"
 log = "0.4"
 lz4 = "1.23.1"
 nix = "0.17"
-pentacle = "0.1.1"
+pentacle = "0.2.0"
 rand = { version = "0.7", default-features = false, features = ["std"] }
 regex = "1.1"
 semver = "0.9"
@@ -26,6 +26,10 @@ url = "2.1.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
+
+[dev-dependencies]
+chrono = "0.4.11"
+storewolf = { path = "../../storewolf" }
 
 [[bin]]
 name = "migrator"
