wicked: move interface state back to persistent storage
Now that lease files are protected by the SELinux policy, we can save
them on durable storage so they are available after an OS update.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/wicked/wicked-tmpfiles.conf
+++ b/packages/wicked/wicked-tmpfiles.conf
@@ -2,3 +2,6 @@ C /etc/wicked/client.xml - - - -
 C /etc/wicked/common.xml - - - -
 C /etc/wicked/nanny.xml - - - -
 C /etc/wicked/server.xml - - - -
+
+d /var/lib/wicked 0700 root root -
+Z /var/lib/wicked 0700 root root -
